# dsgvo-downloader-rs

./: Cargo.toml  README.md
src/: main.rs  schema.sql
