[package]
name = "dsgvo-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "json", "chrono"] }
reqwest = { version = "0.12.21", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["suggestions"] }

[profile.release]
lto = true
panic = "abort"
debug = "none"
