[package]
name = "dsgvo-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "json", "chrono"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["suggestions"] }

[profile.release]
lto = true
panic = "abort"
debug = "none"
